# adventofrust

./: .gitignore  .justfile  Cargo.toml  LICENSE  README.md  template.rs
.github/workflows/: rust.yml
advent2018/: Cargo.toml
advent2018/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
advent2020/: Cargo.toml
advent2020/src/: day1.rs
advent2021/: Cargo.toml
advent2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day22.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
advent2022/: Cargo.toml
advent2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
advent2023/: Cargo.toml
advent2023/src/: day1.rs
utils/: Cargo.toml
utils/src/: counter.rs  grid.rs  lib.rs  nom_parsers.rs
