[package]
name = "advent2018"
description = "Solutions to Advent of Code 2018"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "^0.4.6"
regex = "^1.4.2"
utils = { path = "../utils" }

[[bin]]
name = "2018-day1"
path = "src/day1.rs"

[[bin]]
name = "2018-day2"
path = "src/day2.rs"

[[bin]]
name = "2018-day3"
path = "src/day3.rs"

[[bin]]
name = "2018-day5"
path = "src/day5.rs"
