[package]
name = "advent2018"
description = "Solutions to Advent of Code 2018"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^1.0"
itertools = "^0.4.6"
nom = "^6.0.1"
regex = "^1.4.2"
utils = { path = "../utils" }

[[bin]]
name = "2018-day1"
path = "src/day1.rs"

[[bin]]
name = "2018-day2"
path = "src/day2.rs"

[[bin]]
name = "2018-day3"
path = "src/day3.rs"

[[bin]]
name = "2018-day4"
path = "src/day4.rs"

[[bin]]
name = "2018-day5"
path = "src/day5.rs"

[[bin]]
name = "2018-day6"
path = "src/day6.rs"
