[package]
name = "advent2018"
description = "Solutions to Advent of Code 2018"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
counter = "0.5.2"
itertools = "0.10.3"
ndarray = "0.15.4"
nom = "7"
regex = "1.5"
utils = { path = "../utils" }

[[bin]]
name = "2018-day1"
path = "src/day1.rs"

[[bin]]
name = "2018-day2"
path = "src/day2.rs"

[[bin]]
name = "2018-day3"
path = "src/day3.rs"

[[bin]]
name = "2018-day4"
path = "src/day4.rs"

[[bin]]
name = "2018-day5"
path = "src/day5.rs"

[[bin]]
name = "2018-day6"
path = "src/day6.rs"

[[bin]]
name = "2018-day7"
path = "src/day7.rs"

[[bin]]
name = "2018-day8"
path = "src/day8.rs"

[[bin]]
name = "2018-day9"
path = "src/day9.rs"

[[bin]]
name = "2018-day10"
path = "src/day10.rs"

[[bin]]
name = "2018-day11"
path = "src/day11.rs"

[[bin]]
name = "2018-day12"
path = "src/day12.rs"
