[package]
name = "advent2021"
description = "Solutions to Advent of Code 2021"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
itertools = "0.4.6"
ndarray = "0.15.4"
regex = "1.5"
utils = { path = "../utils" }

[[bin]]
name = "2021-day1"
path = "src/day1.rs"

[[bin]]
name = "2021-day2"
path = "src/day2.rs"

[[bin]]
name = "2021-day3"
path = "src/day3.rs"
