[package]
name = "advent2021"
description = "Solutions to Advent of Code 2021"
version = "0.1.0"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
arrayvec = "0.7"
counter = "0.5.2"
itertools = "0.10.3"
ndarray = "0.15.4"
regex = "1.5"
serde_scan = "0.4.1"
strum = { version = "0.23", features = ["derive"] }
utils = { path = "../utils" }

[[bin]]
name = "2021-day1"
path = "src/day1.rs"

[[bin]]
name = "2021-day2"
path = "src/day2.rs"

[[bin]]
name = "2021-day3"
path = "src/day3.rs"

[[bin]]
name = "2021-day4"
path = "src/day4.rs"

[[bin]]
name = "2021-day5"
path = "src/day5.rs"

[[bin]]
name = "2021-day6"
path = "src/day6.rs"

[[bin]]
name = "2021-day7"
path = "src/day7.rs"

[[bin]]
name = "2021-day8"
path = "src/day8.rs"

[[bin]]
name = "2021-day9"
path = "src/day9.rs"

[[bin]]
name = "2021-day10"
path = "src/day10.rs"

[[bin]]
name = "2021-day11"
path = "src/day11.rs"

[[bin]]
name = "2021-day12"
path = "src/day12.rs"

[[bin]]
name = "2021-day13"
path = "src/day13.rs"

[[bin]]
name = "2021-day14"
path = "src/day14.rs"

[[bin]]
name = "2021-day17"
path = "src/day17.rs"

[[bin]]
name = "2021-day18"
path = "src/day18.rs"

[[bin]]
name = "2021-day22"
path = "src/day22.rs"

[[bin]]
name = "2021-day23"
path = "src/day23.rs"

[[bin]]
name = "2021-day25"
path = "src/day25.rs"
