[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
regex = "1"
utils = { path = "../utils" }

[[bin]]
name = "2022-day1"
path = "src/day1.rs"

[[bin]]
name = "2022-day2"
path = "src/day2.rs"


