[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
counter = "0.5"
itertools = "0.10"
lending-iterator = "0.1"
once_cell = "1"
petgraph = "0.6"
rayon = "1"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
utils = { path = "../utils" }

[[bin]]
name = "2022-day1"
path = "src/day1.rs"

[[bin]]
name = "2022-day2"
path = "src/day2.rs"

[[bin]]
name = "2022-day3"
path = "src/day3.rs"

[[bin]]
name = "2022-day4"
path = "src/day4.rs"

[[bin]]
name = "2022-day5"
path = "src/day5.rs"

[[bin]]
name = "2022-day6"
path = "src/day6.rs"

[[bin]]
name = "2022-day7"
path = "src/day7.rs"

[[bin]]
name = "2022-day8"
path = "src/day8.rs"

[[bin]]
name = "2022-day9"
path = "src/day9.rs"

[[bin]]
name = "2022-day10"
path = "src/day10.rs"

[[bin]]
name = "2022-day11"
path = "src/day11.rs"

[[bin]]
name = "2022-day12"
path = "src/day12.rs"

[[bin]]
name = "2022-day13"
path = "src/day13.rs"

[[bin]]
name = "2022-day14"
path = "src/day14.rs"

[[bin]]
name = "2022-day15"
path = "src/day15.rs"

[[bin]]
name = "2022-day16"
path = "src/day16.rs"


[[bin]]
name = "2022-day17"
path = "src/day17.rs"

[[bin]]
name = "2022-day18"
path = "src/day18.rs"

[[bin]]
name = "2022-day19"
path = "src/day19.rs"