[package]
name = "advent2023"
version = "0.1.0"
edition = "2021"
authors = ["Kesavan Yogeswaran <kesyog@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
counter = "0.5"
itertools = "0.10"
lending-iterator = "0.1"
num = "0.4"
num-complex = "0.4"
once_cell = "1"
petgraph = "0.6"
radix_trie = "0.2"
rayon = "1"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
utils = { path = "../utils" }

[[bin]]
name = "2023-day1"
path = "src/day1.rs"
